# care-classifier

./: .gitignore  Dockerfile  LICENSE  Pipfile  README.md  app.py  care-classifier.ini  classifier.py  install-data.py  manage.py  pyproject.toml
.github/workflows/: onpush.yml
carescripts/: apps.py  asgi.py  generate-schema.py  generate-types.py  models.py  schema.py  settings.py  types.py  wsgi.py
carescripts/fixtures/: berries.json  fractions-skills.json  fractions.json  lessons.json  linear-algebra.json  mathematical-foundations.json  tetris.json
carescripts/migrations/: 0001_initial.py  0002_alter_fruit_color.py  0002_alter_lesson_subject.py
